# sirpi-gcp-backend

./: README.md  pyproject.toml
database/migrations/: 009_add_default_branch_column.sql
src/: main.py
src/agentcore/agents/: code_analyzer_agent.py  dockerfile_generator_agent.py
src/agentcore/prompts/dockerfile_generator/: prompt_template.txt  system_instruction.txt
src/agentcore/prompts/dockerfile_generator/examples/: monorepo_python_nextjs.dockerfile  python_pip.dockerfile  python_poetry.dockerfile  python_uv.dockerfile
src/agentcore/templates/gcp/: cloud_run_template.py
src/api/: gcp_deployments.py  github.py  projects.py  sirpi_assistant.py
src/services/: gcp_assistant_tools.py  sirpi_assistant.py  supabase.py
src/services/deployment/: gcp_deployment.py  sandbox_manager.py
